# scheduler

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  action.yml  codecov.yml  colorado_subset.fgb  conftest.py  dagster.yaml  docker-compose-core.yaml  docker-compose-local.yaml  docker-compose-separated-dagster.yaml  docker-compose-swarm.yaml  docker-compose-user-code.yaml  docker-compose.yaml  main.py  makefile  pyproject.toml  requirements.txt  run.sh  workspace.yaml
.github/actions/e2e-scheduler-test/: action.yml
.github/workflows/: build_prod_test.yml  contanerize.yaml  e2e_test.yml  mkdocs.yml  push_to_ghcr.yml  pyright.yml  static_checks.yml
Docker/: Docker-compose.yaml  Dockerfile_dagster  Dockerfile_user_code  docker-compose-debug.yaml  docker-compose-local.yaml  docker-compose-separated-dagster.yaml  docker-compose-user-code.yaml  docker-compose.yaml  entrypoint.sh  installRclone.py  rclone.sh  user_code_requirements.txt
Docker/dagster/: Dockerfile_dagster  Dockerfile_user_code  entrypoint.sh  rclone.sh  workspace.yaml
Docker/graphdb/: Dockerfile  iow-config.ttl  iowprov-config.ttl
Docker/nginx/: default.conf
assets/: Qleverfile  Qleverfile-ui.yml
cli_lib/: readme.md  utils.py
code/: env.py  lib.py  main.py  readme.md  types.py
code/lib/: classes.py  env.py  legacy.py  types.py  utils.py
dagster/implnets/generatedCode/implnet-iow/output/sch/: implnet_sch_aiannh0.py  implnet_sch_cagagespids0.py  implnet_sch_cbsa0.py  implnet_sch_cdss0.py  implnet_sch_chyldpilotids0.py  implnet_sch_counties0.py  implnet_sch_cuahsihisandrewsforestlterids0.py  implnet_sch_cuahsihisbrazilucbids0.py  implnet_sch_cuahsihiscalvinhhsids0.py  implnet_sch_cuahsihisccbepdapids0.py  implnet_sch_cuahsihiscedarriverids0.py  implnet_sch_cuahsihisclarksburgspids0.py  implnet_sch_cuahsihiscocorahsids0.py  implnet_sch_cuahsihiscrwaids0.py  implnet_sch_cuahsihiscuisoids0.py  implnet_sch_cuahsihisczoarizids0.py  implnet_sch_cuahsihisczoboulderids0.py  implnet_sch_cuahsihisczocatalinaids0.py  implnet_sch_cuahsihisczoluquilloids0.py  implnet_sch_cuahsihisczopsuids0.py  implnet_sch_cuahsihisczoudelids0.py  implnet_sch_cuahsihisdrwiids0.py  implnet_sch_cuahsihisfarmrwaids0.py  implnet_sch_cuahsihisfcelterids0.py  implnet_sch_cuahsihisfrcwqmids0.py  implnet_sch_cuahsihisghcnids0.py  implnet_sch_cuahsihisglacialridgeids0.py  implnet_sch_cuahsihisgleonauburnids0.py  implnet_sch_cuahsihisgleondorsetids0.py  implnet_sch_cuahsihisgleonlakeannieids0.py  implnet_sch_cuahsihisgleonsunapeeids0.py  implnet_sch_cuahsihisglobalriversobservatoryids0.py  implnet_sch_cuahsihisgonggaids0.py  implnet_sch_cuahsihishassbergeids0.py  implnet_sch_cuahsihishydrodataczdids0.py  implnet_sch_cuahsihishydrodataczhrids0.py  implnet_sch_cuahsihisieeratwilkesuniversityids0.py  implnet_sch_cuahsihisirwaids0.py  implnet_sch_cuahsihisisbenaids0.py  implnet_sch_cuahsihiskansasweatherdataids0.py  (+171 more)
docs/: README.md  README_LOCAL_DEVELOPMENT.md  add_containers.md  alternatives.md  developement.md  docs.md  hdt.md  mkdocs.yml  monitoring_workflows.md  quick.md
docs/assets/: docker-compose.yaml
docs/assets/configs/: README.md
docs/assets/configs/archive/: gleanerconfig.yaml  nabuconfig.yaml
docs/assets/configs/archive/assets/: schemaorg-current-http.jsonld  schemaorg-current-https.jsonld
docs/assets/configs/compose/: oihCompose.yaml
docs/images/: appendix.md  flow.d2  orchestrationInit.d2
opentofu/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  variables.tf
opentofu/database/: main.tf  outputs.tf  variables.tf
opentofu/instances/: main.tf  variables.tf
opentofu/network/: main.tf  outputs.tf  variables.tf
opentofu/storage/: .terraform.lock.hcl  gcp.tf  outputs.tf  variables.tf
templates/: gleanerconfig.yaml.j2  gleanerconfigPREFIX.yaml.j2  implnet_ops_SOURCEVAL.py  nabuconfig.yaml.j2  rclone.conf.j2
test/: __init__.py  lib.py  readme.md
tests/: conftest.py  helpers.py  main_test.py  readme.md
tests/lib/: env_test.py  lakefs_test.py  rclone_test.py  zenodo_test.py
tests/lib_test/: classes_test.py  env_test.py  lakefs_test.py  utils_test.py  zenodo_test.py
userCode/: __init__.py  config_pipeline.py  defs.py  defs_test.py  export_pipeline.py  export_pipeline_test.py  exports.py  exports_test.py  harvest_pipeline.py  instance.py  main.py  main_test.py  on_startup.py  pipeline.py  pytest.ini  readme.md  sync_pipeline.py
userCode/.tools/: makefile  readme.md
userCode/assetGroups/: config.py  config_test.py  export.py  export_test.py  harvest.py  harvest_pipeline.py  index_generator.py  release_graph_generator.py  sync.py
userCode/assetGroups/qlever/: Docker-compose.yml  Dockerfile  Qleverfile  makefile
userCode/assetGroups/testdata/: generate_subset.sql  geoconnex_features_subset.parquet  sitemap.xml
userCode/assets/: configs.py  exports.py  pipeline.py
userCode/lib/: __init__.py  classes.py  classes_test.py  containers.py  containers_test.py  dagster.py  dagster_env.py  dagster_helpers.py  env.py  env_test.py  lakefs.py  lakefsUtils.py  types.py  utils.py  utils_test.py
userCode/templates/: gleanerconfig.yaml.j2  nabuconfig.yaml.j2  rclone.conf.j2
userCode/test/: __init__.py  conftest.py  lib.py  test_e2e.py  test_unit.py
userCode/testdata/: colorado_subset.fgb  create_flatgeobuf.py
