# Copyright 2025 Lincoln Institute of Land Policy
# SPDX-License-Identifier: Apache-2.0

[project]
name = "scheduler"
version = "0.1.0"
description = "The geoconnex scheduler repository"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11.11",
    "beautifulsoup4>=4.12.3",
    "dagster-webserver>=1.9.10",
    "dagster>=1.9.10",
    "dagster-docker>=0.25.10",
    "dagster-postgres>=0.25.10",
    "dagster-slack>=0.25.10",
    "jinja2>=3.1.5",
    "lakefs>=0.8.0",
    "lxml>=5.3.0",
    "minio>=7.2.15",
    "pytest>=8.3.4",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "pytest-dotenv>=0.5.2",
    "pytest-cov>=6.0.0",
    "pyright>=1.1.398",
    "pytest-xdist>=3.6.1",
]

[tool.dagster]
module_name = "userCode.main"
code_location_name = "userCode"

[tool.pytest.ini_options]
# we want to be able to override existing env values so .env is the source of truth. Otherwise 
# old env values from a previous run will be set and not overridden
env_override_existing_values = 1
env_files = [
    ".env"
]

[tool.coverage.run]
# don't include tests 
omit = [
    "**/*_test.py",
    "test/",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

# ruff will automatically format long lines
# and remove trailing whitespace; these ignores
# are simply to handle cases like large sparql
# query strings or other literals that cannot be
# formatted safely and thus we would end up ignoring anyways 
ignore = [
 "E501", # line too long 
 "W291"  # trailing whitespace
 ]

[tool.ruff.lint.isort]
#Sort imports taking into account case sensitivity.
case-sensitive = true
# Don't sort straight-style imports (like import sys) before from-style imports (like from itertools import groupby). Instead, sort the imports by module, independent of import style.
force-sort-within-sections = true
# Order imports by type, which is determined by case, in addition to alphabetically.
# By putting this to false we can force the order to be alphabetical.
order-by-type = false